# cp_MDM_training_azure_py

pycoe_streamlit_mdm_example/: CICD_pipeline.yaml  MDM_tool_Intro.py  README.md  pr-pipeline.yaml  pyproject.toml
pycoe_streamlit_mdm_example/pages/: Creation or Upload.py  Match.py
pycoe_streamlit_mdm_example/tests/ci/: test_all_tooling_has_been_installed.py  test_file_has_no_pylint_errors.py  test_file_has_no_safety_errors.py  test_file_has_no_terraform_errors.py
pycoe_streamlit_mdm_example/tests/ux/: conftest.py  test_selenium_capture_url.py  test_selenium_navigation.py
pycoe_streamlit_mdm_example/utils/: data_match.py  gen_data.py
